--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,17 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Fira+Sans|Noto+Sans|Nunito+Sans|Quicksand&display=swap"
+      href="https://fonts.googleapis.com/css?family=Fira+Sans|Noto+Sans|Nunito+Sans:300,400,700|Quicksand&display=swap"
       rel="stylesheet"
     />
 
     <link
       href="https://fonts.googleapis.com/css?family=Lato:400,500,700,800,900"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700|Roboto&display=swap"
       rel="stylesheet"
     />
   </head>
